# wf

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.h
bubble_sort_c_sv_comp/: bubble_sort.c  bubble_sort.sv  run_tests.py  sorted_vectors.txt  test_vectors.txt  testbench.sv  transcript  verilog_sorted_vectors.txt
bubble_sort_c_sv_comp/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
bubble_sort_c_sv_comp_byCopilot/: bubble_sort.c  bubble_sort.sv  run_tests.py  test_params.h  test_params.svh  testbench.sv  transcript
bubble_sort_c_sv_comp_byCopilot/input_vectors/: input_vectors_0.txt  input_vectors_1.txt  input_vectors_10.txt  input_vectors_100.txt  input_vectors_101.txt  input_vectors_102.txt  input_vectors_103.txt  input_vectors_104.txt  input_vectors_105.txt  input_vectors_106.txt  input_vectors_107.txt  input_vectors_108.txt  input_vectors_109.txt  input_vectors_11.txt  input_vectors_110.txt  input_vectors_111.txt  input_vectors_112.txt  input_vectors_113.txt  input_vectors_114.txt  input_vectors_115.txt  input_vectors_116.txt  input_vectors_117.txt  input_vectors_118.txt  input_vectors_119.txt  input_vectors_12.txt  input_vectors_120.txt  input_vectors_121.txt  input_vectors_122.txt  input_vectors_123.txt  input_vectors_124.txt  input_vectors_125.txt  input_vectors_126.txt  input_vectors_127.txt  input_vectors_128.txt  (+266 more)
bubble_sort_c_sv_comp_byXiaomi/: bubble_sort.cpp  bubble_sort.sv  bubble_sort_sim  bubble_sort_tb  bubble_sort_tb.sv  input_data.txt  run_tests.py
bubble_sort_c_test/: bubbleSort.h  test_bubbleSort.cpp
(+633 files in other folders)
